# ble-canbus-transmitter-esp32-v2

./: .gitignore  README.md  lv_conf.h  platformio.ini
main/: battery_widget.cpp  battery_widget.h  elm327_service.cpp  elm327_service.h  globals.cpp  globals.h  lvgl_driver.cpp  lvgl_driver.h  main.ino  touth_driver.cpp  touth_driver.h  ui.cpp  ui.h  utils.cpp  utils.h  wifi_service.cpp  wifi_service.h
shared/ui/: library.json
shared/ui/include/: ui.h  ui_model.h
shared/ui/src/: ui.cpp
simulator/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h
simulator/src/: main.cpp
